Added portfolio page

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -2,4 +2,5 @@
     <h1>{{pageTitle}} page</h1>
     <p><a href="/">Home</a></p>
     <p><a href="/mylove">My Love</a></p>
+    <p><a href="/projects">Portfolio</a> </p>
 </header>
